# test_task_bogdanov

./: .env.template  README.md  pyproject.toml  start-full.sh  start.sh
bot/: api_request.py  bot.py  exceptions.py
docker/: Dockerfile  docker-compose-core.yml  docker-compose.yml
src/: alembic.ini  celery-beat-entrypoint.sh  celery-entrypoint.sh  main.py  project_celery.py
src/api/v1/: router.py
src/api/v1/endpoints/: product.py
src/configs/: config.py  loggers.py
src/crud/: async_crud.py  product.py
src/crud/crud_mixins/: __init__.py  base.py  bulk.py  create.py  delete.py  read.py  update.py
src/databases/: database.py
src/databases/migrations/: env.py
src/databases/migrations/versions/: 2025_01_21_0546-9a369e24f6b9_add_product_model.py
src/models/: __init__.py  base.py  product.py
src/schemas/: product.py  service.py  token.py
src/security/: password.py  token.py
src/service/: product.py
src/tasks/: tasks.py
src/utilities/: api_request.py  async_utils.py  exceptions.py  tokens.py
